--- a/style.css
+++ b/style.css
@@ -1,29 +1,29 @@
 body {
     background: rgb(116, 131, 97);
     color: rgba(24, 24, 55,);
-    padding: 10px;
+    padding: 20px;
     font-family: 'Courier New', Courier, monospace
   }
 #all-contents {
-  max-width: 800px;
+  max-width: 900px;
     margin: auto;
 }
 
 /* navigation menu */
 nav {
     background: rgb(155, 128, 155);
-   margin: 0 auto;
-   margin-bottom: 20px
-    display: flex;
+   margin: 15px;
+   margin-right: 25px
+   display: flex;
     padding: 10px;
-    border-radius: 15px;
+    border-radius: 30px;
 }
 h1 {
     display: flex;
     align-items: center;
     color: rgb(243, 255, 130);
     flex: 1;
-    margin: 0;
+    margin: 20px;
 }
 #nav-ul {
     list-style-image: none;
@@ -33,7 +33,7 @@ h1 {
     padding: 0 10px;
 }
 a {
-    text-decoration: times;
+    text-decoration: plum;
     color: rgb(255, 145, 72);
 }
 
@@ -52,32 +52,32 @@ main {
 }
 .content {
   flex: 1;
-  padding: 15px;
+  padding: 15 50px 30px;
 }
 
 /* portfolio styles */
 #interests {
-  border: 4px rgb(51, 102, 0);
-  padding: 8px;
+  border: 5px rgb(51, 102, 0);
+  padding: 20px;
 }
 h2, h3 {
-  margin: 0px;
+  margin: 10px;
 }
        /* portfolio styles */
        .content h1 {
-          color: black;
+          color: rgb(255, 145, 72g);
       }
 
       #portfolio {
           list-style-type: none;
-          padding-left: 0;
+          padding: 20px;
       }
 
       #portfolio li {
-          background: #fff;
+          background: #fdefd8;
           padding: 10px;
           border-radius: 15px;
-          margin-bottom: 10px;
+          margin-bottom: 20px;
       }
 
       #portfolio li:hover {
@@ -93,7 +93,7 @@ h2, h3 {
         main {
           height: 300ch;
           zoom: 5px;
-          display: ruby-base-container;
+          display: table-cell;
         }
 
         h1 {
@@ -110,7 +110,7 @@ h2, h3 {
 
         #all-contents {
           height: 100ch;
-          margin: none;
+          margin: 5px;
         }
 
         a {
