--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ h2, h3 {
 }
        /* portfolio styles */
        .content h1 {
-          color: rgb(255, 145, 72g);
+          color: rgb(255, 145, 72);
       }
 
       #portfolio {
