--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 nav {
     background: rgb(155, 128, 155);
    margin: 15px;
-   margin-right: 25px
+   margin-right: 25px;
    display: flex;
     padding: 10px;
     border-radius: 30px;
@@ -34,7 +34,7 @@ h1 {
 }
 a {
     text-decoration: plum;
-    color: rgb(255, 145, 72);
+    color: rgb(236, 205, 185);
 }
 
 /* main container area beneath menu */
@@ -44,7 +44,7 @@ main {
 }
 .sidebar {
   margin-right: 25px;
-  padding: 10px;
+  padding: 20px;
 }
 .sidebar-img {
   width: 200px;
