--- a/projects/platformer/platformer.css
+++ b/projects/platformer/platformer.css
@@ -3,9 +3,13 @@ body {
 }
 
 canvas {
-  background-color: lightgray;
+  background-color: rgb(13, 16, 51);
+  
 }
 
 img {
-  display: none;
+  display: none
 }
+#steve = 
+
+
